<resources>
    <string name="app_name">SemestrálnaPrácaHelis</string>
    <string name="gladiator">Gladiator</string>
    <string name="gladi_tor">Gladiátor</string>
    <string name="tart">Štart</string>
    <string name="tutori_l">Tutoriál</string>
    <string name="tok">Útok</string>
    <string name="obrana">Obrana</string>
    <string name="ivoty">Životy</string>
    <string name="potvrdi">Potvrdiť</string>
    <string name="arena">Arena</string>
    <string name="meno_0">Meno: 0</string>
    <string name="utok_0">Utok: 0</string>
    <string name="obrana_0">Obrana: 0</string>
    <string name="zivoty_0">Zivoty: 0</string>
    <string name="meno_1">Meno: 0</string>
    <string name="utok_1">Utok: 0</string>
    <string name="obrana_1">Obrana: 0</string>
    <string name="zivoty_1">Zivoty: 0</string>
    <string name="boj">Boj</string>
    <string name="kas_rne">Kasárne</string>
    <string name="ar_na">Aréna</string>
    <string name="obchod_so_zbra_ami">Obchod so zbraňami</string>
    <string name="obchod_s_brnen_m">Obchod s brnením</string>
    <string name="str_na_slu_ba">Strážna služba</string>
    <string name="pou_i_sk_senostn_body">Použiť skúsenostné body</string>
    <string name="peniaze_0">Peniaze: 0</string>
    <string name="brnenie">Brnenie:</string>
    <string name="ko_en_brnenie_prid_va_1_do_atrib_tu_obrana_cena_10_minc">Kožené brnenie: Pridáva +1 do atribútu obrana. Cena 10 mincí.</string>
    <string name="ocelov_brnenie_prid_va_3_do_atrib_tu_obrana_cena_50_minc">Ocelové brnenie: Pridáva +3 do atribútu obrana. Cena 50 mincí.</string>
    <string name="tit_nov_brnenie_prid_va_5_do_atrib_tu_obrana_cena_100_minc">Titánové brnenie: Pridáva +5 do atribútu obrana. Cena 100 mincí.</string>
    <string name="ko_en_brnenie">Kožené brnenie</string>
    <string name="ocelov_brnenie">Ocelové brnenie</string>
    <string name="tit_nov_brnenie">Titánové brnenie</string>
    <string name="k_pi">Kúpiť</string>
    <string name="nasp_do_kas_rn">Naspäť do kasární</string>
    <string name="vyrobi">Vyrobiť</string>
    <string name="vyzdvihn_zbra">Vyzdvihnúť zbraň</string>
    <string name="chyba_m_lo_pe_az_alebo_zl_nastavenie_atrib_tov">Chyba! Málo peňazí, alebo zlé nastavenie atribútov.</string>
    <string name="vybra_odmenu">Vybrať odmenu</string>
    <string name="zadajte_ako_dlho_chcete_pracova">Zadajte ako dlho chcete pracovať:</string>
    <string name="hru_za_nate_vytvoren_m_svojho_gladi_tora_po_vytvoren_gladi_tora_sa_budete_nach_dza_v_kas_r_ach_kde_budete_vidie_atrib_ty_va_ej_postavy_ako_aj_po_et_minc_stla_en_m_tla_idiel_sa_dostanete_do_a_ich_lok_ci_ako_obchod_s_brnen_m_a_zbra_ami_kde_si_za_mince_m_ete_nakupova_vybavenie_a_ia_lok_cia_sl_i_na_v_ber_s_pera_s_ktor_m_budete_bojova_na_v_ber_m_te_s_perov_s_tromi_obtia_nos_ami_ke_si_s_pera_vyberiete_ocitnete_sa_v_ar_ne_kde_uvid_te_va_e_aj_s_perov_atrib_ty_a_ukazovate_zdravia_tla_idlom_boj_odohr_vate_s_boj_ak_zomriete_za_nate_odznova_v_pr_pade_e_pre_ijete_dostanete_peniaze_a_sk_senosti_vyhr_te_ke_zdol_te_naj_a_ieho_oponenta">Hru začínate vytvorením svojho gladiátora. Po vytvorení gladiátora sa budete nachádzať v kasárňach, kde budete vidieť atribúty vašej postavy, ako aj počet mincí. Stlačením tlačidiel sa dostanete do ďaľšich lokácií ako obchod s brnením a zbraňami, kde si za mince môžete nakupovať vybavenie. Lokácia Alokuj body slúži na navýšenie atribútov vášho gladiátora, ak máte skúsenostné body. Ďaľšia lokácia je služobná stráž, kde môžete pracovať a dostať mince. Posledná lokácia slúži na výber súpera, s ktorým budete bojovať. Na výber máte súperov s tromi obtiažnosťami. Keď si súpera vyberiete ocitnete sa v aréne, kde uvidíte vaše aj súperové atribúty a ukazovateľ zdravia. Tlačidlom \'Boj\' odohrávate súboj. Ak zomriete začínate odznova, v prípade, že prežijete dostanete peniaze a skúsenosti. Vyhráte, keď zdoláte najťažšieho oponenta.</string>
    <string name="sp">Späť</string>
    <string name="super_1_button">Super 1 Button</string>
    <string name="super_2_button">Super 2 Button</string>
    <string name="super_3_button">Super 3 Button</string>
    <string name="v_ber_s_pera">Výber súpera</string>
    <string name="vyberte_si_jedn_ho_z_troch_s_perov_na_avej_strane_je_najlach_s_per_a_naopak_na_pravej_strane_je_naj_ach_s_pera_si_vyberiete_kliknut_m_jedn_ho_z_obr_zkov">Vyberte si jedného z troch súperov. Na ľavej strane je najlachší súper a naopak na pravej strane je najťachší. Súpera si vyberiete kliknutím jedného z obrázkov</string>
    <string name="tvorba_gladi_tora">Tvorba gladiátora</string>
    <string name="vyberte_si_atrib_ty_pre_v_ho_gladi_tora_ke_dokon_te_v_ber_atrib_tov_stla_te_tla_idlo_pokra_ova">Vyberte si atribúty pre vášho gladiátora. Keď dokončíte výber atribútov stlačte tlačidlo Pokračovať.</string>
    <string name="zadajte_meno_gladi_tora">Zadajte meno gladiátora:</string>
    <string name="zvolen_hodnota_0">Zvolená hodnota: 0</string>
    <string name="pokra_ova">Pokračovať</string>
</resources>