<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vytvorenie">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvorba_gladi_tora"
        android:textColor="#473112"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vyberte_si_atrib_ty_pre_v_ho_gladi_tora_ke_dokon_te_v_ber_atrib_tov_stla_te_tla_idlo_pokra_ova"
            android:textColor="#FFFFFF"/>

        <EditText
            android:id="@+id/menoPostavy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zadajte_meno_gladi_tora"
            android:textColorHint="#FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tok"
            android:textColor="#FFFFFF"/>

        <SeekBar
            android:id="@+id/slider_utok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="0" />

        <TextView
            android:id="@+id/slider_utok_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zvolen_hodnota_0"
            android:textColor="#FFFFFF"
            android:layout_marginEnd="40dp"/>

        <Space
            android:layout_width="122dp"
            android:layout_height="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obrana"
            android:textColor="#FFFFFF"
            android:layout_marginEnd="16dp"/>

        <SeekBar
            android:id="@+id/slider_obrana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="0" />

        <TextView
            android:id="@+id/slider_obrana_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zvolen_hodnota_0"
            android:textColor="#FFFFFF"/>

        <Space
            android:layout_width="122dp"
            android:layout_height="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ivoty"
            android:textColor="#FFFFFF"/>

        <SeekBar
            android:id="@+id/slider_zivoty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="0" />

        <TextView
            android:id="@+id/slider_zivoty_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zvolen_hodnota_0"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/koniec_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pokra_ova" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>