<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/guard">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_na_slu_ba"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="401dp"
        android:layout_height="166dp"
        android:layout_marginTop="412dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/potvrdit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/potvrdi"
            tools:layout_editor_absoluteY="381dp" />

        <Button
            android:id="@+id/odmena_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vybra_odmenu"
            tools:layout_editor_absoluteY="381dp" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nasp_do_kas_rn"
            tools:layout_editor_absoluteY="430dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextPocetSekund"
        android:layout_width="407dp"
        android:layout_height="56dp"
        android:layout_marginTop="204dp"
        android:hint="@string/zadajte_ako_dlho_chcete_pracova"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>