<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/prednastrana">


    <TextView
        android:id="@+id/gladiator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="48dp"
        android:text="@string/gladi_tor"
        android:textColor="#917243"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/zacni_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/tart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gladiator" />

    <Button
        android:id="@+id/toturial_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tutori_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zacni_button" />

</androidx.constraintlayout.widget.ConstraintLayout>